# raman_bench

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
cluster/: run_benchmark.sbatch
configs/: debug.json  default.yaml  full.yaml  minimal.json  minimal.yaml  quick.yaml
scripts/: run_benchmark.py  test_package.py
src/raman_bench/: __init__.py  benchmark.py  cli.py  config.py  evaluation.py  model.py  predictions.py  preprocessing.py
src/raman_bench/benchmark/: config.py  dataset.py  metrics.py  model.py  model_factory.py  plotting.py  predictions.py  preprocessing.py  utils.py
src/raman_bench/evaluation/: __init__.py  runner.py
src/raman_bench/metrics/: __init__.py  classification.py  regression.py  utils.py
src/raman_bench/models/: __init__.py  advanced.py  base.py  classical.py  deep_learning.py  registry.py
src/raman_bench/plotting/: __init__.py  plotter.py  plotting.py  utils.py
src/raman_bench/preprocessing/: __init__.py  pipeline.py  utils.py
tests/: __init__.py  test_data.py  test_dataset_benchmark.py  test_metrics.py  test_models.py  test_preprocessing.py
