[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raman_bench"
version = "0.1.0"
description = "A comprehensive benchmark evaluation framework for Raman spectroscopy models"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Mario Koddenbrock", email = "mario.koddenbrock@htw-berlin.de"},
    {name = "Christoph Lange", email = "christoph.lange@tu-berlin.de"}
]
keywords = ["raman", "spectroscopy", "benchmark", "machine-learning", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.21,<2.0",
    "pandas>=1.4,<3.0",
    "scikit-learn>=1.0,<2.0",
    "matplotlib>=3.5,<4.0",
    "seaborn>=0.12,<0.13",
    "scipy>=1.10,<1.14",
    "tqdm>=4.64,<5.0",
    "pyyaml>=6.0,<7.0",
    "ramanspy>=0.2.0,<0.3.0",
    "autogluon.tabular>=1.2,<1.4",
    "tabpfn>=0.1,<0.2",
    "interpret>=0.4,<0.5",
    "optuna>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=1.0",
]

[project.urls]
Homepage = "https://github.com/raman-bench/raman_bench"
Repository = "https://github.com/raman-bench/raman_bench"
Issues = "https://github.com/raman-bench/raman_bench/issues"

[project.scripts]
raman-bench = "raman_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["raman_bench"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=raman_bench --cov-report=term-missing"

